将plex的32400端口在宿主机上开放出来

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -50,6 +50,15 @@ spec:
         existingClaim: tv-files
 
     service:
+      main:
+        primary: true
+        type: NodePort
+        ports:
+          http:
+            enabled: true
+            port: 32400
+            protocol: TCP
+            targetPort: 32400
       dnla-tcp:
         enabled: true
       dnla-udp:
