将plex的32400端口在宿主机上开放出来

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -59,6 +59,7 @@ spec:
             port: 32400
             protocol: TCP
             targetPort: 32400
+            nodePort: 32400
       dnla-tcp:
         enabled: true
       dnla-udp:
