手动指定Plex的宿主机IP，以避免因为Plex获取到容器IP而导致无法正常直连访问

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
     env:
       TZ: "Asia/Shanghai"
       PLEX_CLAIM: "${SECRET_PLEX_CLAIM}"
+      ADVERTISE_IP: "{SECRET_ADVERTISE_IP}"
 
     persistence:
       config:
