--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -24,14 +24,15 @@ stringData:
   SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
   SECRET_PHOTOPRISM_PASSWORD: ENC[AES256_GCM,data:i3rpGQ5qx9xCHIN0BJqYLh1U7i7jEFBsEqamvtTSP+I=,iv:/uDmP6CjagnEyy6u7QxMPt3DEwmRcNbzSPywn2ZOg1g=,tag:NJmw4yoAQKv9OFlwecRTKQ==,type:str]
   SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:AJ2u1+ddV+G4LipRCDeG+R1EWwsRQwwne2U=,iv:IrQ0C2yM8kLCLVzTWHb194kqsR9Wpet1SOA7oJD5EZY=,tag:PVAfQfdMVP11k0AKZZuXRg==,type:str]
+  SECRET_ADVERTISE_IP: ENC[AES256_GCM,data:tissf74ZNEDN7sczb3cEuEhRdI/cBiQq,iv:9bmmDrNVFetuD2kiMu3cRS7sve/K2f0yTQ9YKw8681o=,tag:d4UryXu6nsua5+yyxh1h7A==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-04-24T18:57:50Z"
-  mac: ENC[AES256_GCM,data:rtj6JwrNEe5LoLDiMEtJAYhG9pd1EELnz9hToSCI+8ijXfjj3bm+AkihH+8WH5gDKTh7y1GgR6/cxyCs0Zr39dzwjKKhSm59McVvyAlNzOQ2oiwSAn2ihPV7eTwBCXDZZ55MiLm8ZQ0o866AIZnlgOYb0YNrK14iQaOZ2bAbB5w=,iv:C1QMSzJWVgVZEwn/4Sd8DaxqShLEzX87PyGDYkeplUE=,tag:ODwNj8q+ZwDbW5/dbvjv2w==,type:str]
+  lastmodified: "2022-05-07T04:25:55Z"
+  mac: ENC[AES256_GCM,data:3nV6lS+G0Hf1GPgLBxe6Xm9olE5a6nAOX8XP4BSnXbJDo+b+eNesLw84MpYmdks1fsbxqlRZtxwukm7axwFAAhcPalAJB4lbIbZTu30u7Jr3m3oqPCWwOMzgAqUvGe8HfIjWtXi7xwFonYATQ57EV+Xxfsalww7GAGbItA5A93Q=,iv:WM6EqdVzb9oJyF8Rt8ro/uG+cDuMskENbOOFa2Gk3zk=,tag:c2hbjSCR+Y8KRFoS/2NaBw==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
