--- a/cluster/core/rook-ceph/default_helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/default_helm-ceph-operator.yaml
@@ -3,17 +3,16 @@
 # Declare variables to be passed into your templates.
 
 image:
-  prefix: rook
   repository: rook/ceph
-  tag: v1.7.1
+  tag: v1.9.2
   pullPolicy: IfNotPresent
 
 crds:
   # Whether the helm chart should create and update the CRDs. If false, the CRDs must be
-  # managed independently with cluster/examples/kubernetes/ceph/crds.yaml.
+  # managed independently with deploy/examples/crds.yaml.
   # **WARNING** Only set during first deployment. If later disabled the cluster may be DESTROYED.
   # If the CRDs are deleted in this case, see the disaster recovery guide to restore them.
-  # https://rook.github.io/docs/rook/master/ceph-disaster-recovery.html#restoring-crds-after-deletion
+  # https://rook.github.io/docs/rook/latest/ceph-disaster-recovery.html#restoring-crds-after-deletion
   enabled: true
 
 resources:
@@ -29,7 +28,7 @@ nodeSelector: {}
 # For more info, see https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
 #  disktype: ssd
 
-# Tolerations for the rook-ceph-operator to allow it to run on nodes with particular taints
+# Tolerations for the rook-ceph-operator to allow it to run on nodes with particular taints
 tolerations: []
 
 # Delay to use in node.kubernetes.io/unreachable toleration
@@ -41,7 +40,7 @@ currentNamespaceOnly: false
 ## Annotations to be added to pod
 annotations: {}
 
-## LogLevel can be set to: TRACE, DEBUG, INFO, NOTICE, WARNING, ERROR or CRITICAL
+## The logging level for the operator: ERROR | WARNING | INFO | DEBUG
 logLevel: INFO
 
 ## If true, create & use RBAC resources
@@ -51,6 +50,9 @@ rbacEnable: true
 ## If true, create & use PSP resources
 ##
 pspEnable: true
+
+# Set the priority class for the rook operator deployment if desired
+# priorityClassName: class
 
 ## Settings for whether to disable the drivers or other daemons if they are not
 ## needed
@@ -66,11 +68,16 @@ csi:
   enableCephfsSnapshotter: true
   # set to false to disable deployment of snapshotter container in RBD provisioner pod.
   enableRBDSnapshotter: true
+  # set to false if the selinux is not enabled or unavailable in cluster nodes.
+  enablePluginSelinuxHostMount: false
+  # set to true to enable Ceph CSI pvc encryption support.
+  enableCSIEncryption: false
+
   # (Optional) set user created priorityclassName for csi plugin pods.
-  # pluginPriorityClassName: system-node-critical
+  pluginPriorityClassName: system-node-critical
 
   # (Optional) set user created priorityclassName for csi provisioner pods.
-  # provisionerPriorityClassName: system-cluster-critical
+  provisionerPriorityClassName: system-cluster-critical
 
   # (Optional) policy for modifying a volume's ownership or permissions when the RBD PVC is being mounted.
   # supported values are documented at https://kubernetes-csi.github.io/docs/support-fsgroup.html
@@ -78,7 +85,11 @@ csi:
 
   # (Optional) policy for modifying a volume's ownership or permissions when the CephFS PVC is being mounted.
   # supported values are documented at https://kubernetes-csi.github.io/docs/support-fsgroup.html
-  cephFSFSGroupPolicy: "None"
+  cephFSFSGroupPolicy: "ReadWriteOnceWithFSType"
+
+  # (Optional) policy for modifying a volume's ownership or permissions when the NFS PVC is being mounted.
+  # supported values are documented at https://kubernetes-csi.github.io/docs/support-fsgroup.html
+  nfsFSGroupPolicy: "ReadWriteOnceWithFSType"
 
   # OMAP generator generates the omap mapping between the PV name and the RBD image
   # which helps CSI to identify the rbd images for CSI operations.
@@ -87,165 +98,230 @@ csi:
   # sidecar with CSI provisioner pod, to enable set it to true.
   enableOMAPGenerator: false
 
+  # Set replicas for csi provisioner deployment.
+  provisionerReplicas: 2
+
   # Set logging level for csi containers.
   # Supported values from 0 to 5. 0 for general useful logs, 5 for trace level verbosity.
   #logLevel: 0
-  # CSI CephFS plugin daemonset update strategy, supported values are OnDelete and RollingUpdate.
+  # CSI RBD plugin daemonset update strategy, supported values are OnDelete and RollingUpdate.
   # Default value is RollingUpdate.
   #rbdPluginUpdateStrategy: OnDelete
-  # CSI Rbd plugin daemonset update strategy, supported values are OnDelete and RollingUpdate.
+  # CSI CephFS plugin daemonset update strategy, supported values are OnDelete and RollingUpdate.
   # Default value is RollingUpdate.
   #cephFSPluginUpdateStrategy: OnDelete
+  # CSI NFS plugin daemonset update strategy, supported values are OnDelete and RollingUpdate.
+  # Default value is RollingUpdate.
+  #nfsPluginUpdateStrategy: OnDelete
+  # The CSI GRPC timeout value (in seconds). It should be >= 120. If this variable is not set or is an invalid value, it's default to 150.
+  grpcTimeoutInSeconds: 150
+
   # Allow starting unsupported ceph-csi image
   allowUnsupportedVersion: false
-    # (Optional) CEPH CSI RBD provisioner resource requirement list, Put here list of resource
+  # CEPH CSI RBD provisioner resource requirement list, Put here list of resource
   # requests and limits you want to apply for provisioner pod
-  # csiRBDProvisionerResource: |
-  #  - name : csi-provisioner
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-resizer
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-attacher
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-snapshotter
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-rbdplugin
-  #    resource:
-  #      requests:
-  #        memory: 512Mi
-  #        cpu: 250m
-  #      limits:
-  #        memory: 1Gi
-  #        cpu: 500m
-  #  - name : liveness-prometheus
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
-  # (Optional) CEPH CSI RBD plugin resource requirement list, Put here list of resource
+  # csi-omap-generator resources will be applied only if enableOMAPGenerator is set to true
+  csiRBDProvisionerResource: |
+    - name : csi-provisioner
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-resizer
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-attacher
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-snapshotter
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-rbdplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+    - name : csi-omap-generator
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+    - name : liveness-prometheus
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+  # CEPH CSI RBD plugin resource requirement list, Put here list of resource
   # requests and limits you want to apply for plugin pod
-  # csiRBDPluginResource: |
-  #  - name : driver-registrar
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
-  #  - name : csi-rbdplugin
-  #    resource:
-  #      requests:
-  #        memory: 512Mi
-  #        cpu: 250m
-  #      limits:
-  #        memory: 1Gi
-  #        cpu: 500m
-  #  - name : liveness-prometheus
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
-  # (Optional) CEPH CSI CephFS provisioner resource requirement list, Put here list of resource
+  csiRBDPluginResource: |
+    - name : driver-registrar
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+    - name : csi-rbdplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+    - name : liveness-prometheus
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+  # CEPH CSI CephFS provisioner resource requirement list, Put here list of resource
   # requests and limits you want to apply for provisioner pod
-  # csiCephFSProvisionerResource: |
-  #  - name : csi-provisioner
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-resizer
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-attacher
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 100m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 200m
-  #  - name : csi-cephfsplugin
-  #    resource:
-  #      requests:
-  #        memory: 512Mi
-  #        cpu: 250m
-  #      limits:
-  #        memory: 1Gi
-  #        cpu: 500m
-  #  - name : liveness-prometheus
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
-  # (Optional) CEPH CSI CephFS plugin resource requirement list, Put here list of resource
+  csiCephFSProvisionerResource: |
+    - name : csi-provisioner
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-resizer
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-attacher
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-snapshotter
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-cephfsplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+    - name : liveness-prometheus
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+  # CEPH CSI CephFS plugin resource requirement list, Put here list of resource
   # requests and limits you want to apply for plugin pod
-  # csiCephFSPluginResource: |
-  #  - name : driver-registrar
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
-  #  - name : csi-cephfsplugin
-  #    resource:
-  #      requests:
-  #        memory: 512Mi
-  #        cpu: 250m
-  #      limits:
-  #        memory: 1Gi
-  #        cpu: 500m
-  #  - name : liveness-prometheus
-  #    resource:
-  #      requests:
-  #        memory: 128Mi
-  #        cpu: 50m
-  #      limits:
-  #        memory: 256Mi
-  #        cpu: 100m
+  csiCephFSPluginResource: |
+    - name : driver-registrar
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+    - name : csi-cephfsplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+    - name : liveness-prometheus
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+  # CEPH CSI NFS provisioner resource requirement list, Put here list of resource
+  # requests and limits you want to apply for provisioner pod
+  csiNFSProvisionerResource: |
+    - name : csi-provisioner
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+    - name : csi-nfsplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+  # CEPH CSI NFS plugin resource requirement list, Put here list of resource
+  # requests and limits you want to apply for plugin pod
+  csiNFSPluginResource: |
+    - name : driver-registrar
+      resource:
+        requests:
+          memory: 128Mi
+          cpu: 50m
+        limits:
+          memory: 256Mi
+          cpu: 100m
+    - name : csi-nfsplugin
+      resource:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
+
   # Set provisonerTolerations and provisionerNodeAffinity for provisioner pod.
   # The CSI provisioner would be best to start on the same nodes as other ceph daemons.
   # provisionerTolerations:
@@ -263,6 +339,7 @@ csi:
   #cephfsGrpcMetricsPort: 9091
   #cephfsLivenessMetricsPort: 9081
   #rbdGrpcMetricsPort: 9090
+  #csiAddonsPort: 9070
   # Enable Ceph Kernel clients on kernel < 4.17. If your kernel does not support quotas for CephFS
   # you may want to disable this setting. However, this will cause an issue during upgrades
   # with the FUSE client. See the upgrade guide: https://rook.io/docs/rook/v1.2/ceph-upgrade.html
@@ -270,58 +347,42 @@ csi:
   #rbdLivenessMetricsPort: 9080
   #kubeletDirPath: /var/lib/kubelet
   #cephcsi:
-    #image: quay.io/cephcsi/cephcsi:v3.4.0
+    #image: quay.io/cephcsi/cephcsi:v3.6.1
   #registrar:
-    #image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.2.0
-  #provisioner:
-    #image: k8s.gcr.io/sig-storage/csi-provisioner:v2.2.2
-  #snapshotter:
-    #image: k8s.gcr.io/sig-storage/csi-snapshotter:v4.1.1
-  #attacher:
-    #image: k8s.gcr.io/sig-storage/csi-attacher:v3.2.1
-  #resizer:
-    #image: k8s.gcr.io/sig-storage/csi-resizer:v1.2.0
+    #image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0
+    #provisioner:
+    #image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
+    #snapshotter:
+    #image: k8s.gcr.io/sig-storage/csi-snapshotter:v5.0.1
+    #attacher:
+    #image: k8s.gcr.io/sig-storage/csi-attacher:v3.4.0
+    #resizer:
+  #image: k8s.gcr.io/sig-storage/csi-resizer:v1.4.0
   # Labels to add to the CSI CephFS Deployments and DaemonSets Pods.
   #cephfsPodLabels: "key1=value1,key2=value2"
+  # Labels to add to the CSI NFS Deployments and DaemonSets Pods.
+  #nfsPodLabels: "key1=value1,key2=value2"
   # Labels to add to the CSI RBD Deployments and DaemonSets Pods.
   #rbdPodLabels: "key1=value1,key2=value2"
-  # Enable volume replication controller
+  # Enable the volume replication controller.
+  # Before enabling, ensure the Volume Replication CRDs are created.
+  # See https://rook.io/docs/rook/latest/ceph-csi-drivers.html#rbd-mirroring
   volumeReplication:
     enabled: false
-    #image: "quay.io/csiaddons/volumereplication-operator:v0.1.0"
-
-enableFlexDriver: false
+    #image: "quay.io/csiaddons/volumereplication-operator:v0.3.0"
+  # Enable the CSIAddons sidecar.
+  csiAddons:
+    enabled: false
+    #image: "quay.io/csiaddons/k8s-sidecar:v0.2.1"
+  # Enable the nfs csi driver.
+  nfs:
+    enabled: false
+    #image: "k8s.gcr.io/sig-storage/nfsplugin:v3.1.0"
 enableDiscoveryDaemon: false
 cephCommandsTimeoutSeconds: "15"
 
-# enable the ability to have multiple Ceph filesystems in the same cluster
-# WARNING: Experimental feature in Ceph Releases Octopus (v15) and Nautilus (v14)
-# https://docs.ceph.com/en/octopus/cephfs/experimental-features/#multiple-file-systems-within-a-ceph-cluster
-allowMultipleFilesystems: false
-
 ## if true, run rook operator on the host network
 # useOperatorHostNetwork: true
-
-## Rook Agent configuration
-## toleration: NoSchedule, PreferNoSchedule or NoExecute
-## tolerationKey: Set this to the specific key of the taint to tolerate
-## tolerations: Array of tolerations in YAML format which will be added to agent deployment
-## nodeAffinity: Set to labels of the node to match
-## flexVolumeDirPath: The path where the Rook agent discovers the flex volume plugins
-## libModulesDirPath: The path where the Rook agent can find kernel modules
-# agent:
-#   toleration: NoSchedule
-#   tolerationKey: key
-#   tolerations:
-#   - key: key
-#     operator: Exists
-#     effect: NoSchedule
-#   nodeAffinity: key1=value1,value2; key2=value3
-#   mountSecurityMode: Any
-## For information on FlexVolume path, please refer to https://rook.io/docs/rook/master/flexvolume.html
-#   flexVolumeDirPath: /usr/libexec/kubernetes/kubelet-plugins/volume/exec/
-#   libModulesDirPath: /lib/modules
-#   mounts: mount1=/host/path:/container/path,/host/path2:/container/path2
 
 ## Rook Discover configuration
 ## toleration: NoSchedule, PreferNoSchedule or NoExecute
@@ -343,6 +404,8 @@ allowMultipleFilesystems: false
 # For more details see https://github.com/rook/rook/issues/2417
 enableSelinuxRelabeling: true
 
+disableAdmissionController: false
+
 # Writing to the hostPath is required for the Ceph mon and osd pods. Given the restricted permissions in OpenShift with SELinux,
 # the pod must be running privileged in order to write to the hostPath volume, this must be set to true then.
 hostpathRequiresPrivileged: false
@@ -361,11 +424,16 @@ discoverDaemonUdev:
 enableOBCWatchOperatorNamespace: true
 
 admissionController:
-  # Set tolerations and nodeAffinity for admission controller pod.
-  # The admission controller would be best to start on the same nodes as other ceph daemons.
-  # tolerations:
-  #    - key: key
-  #      operator: Exists
-  #      effect: NoSchedule
-  # nodeAffinity: key1=value1,value2; key2=value3
+# Set tolerations and nodeAffinity for admission controller pod.
+# The admission controller would be best to start on the same nodes as other ceph daemons.
+# tolerations:
+#    - key: key
+#      operator: Exists
+#      effect: NoSchedule
+# nodeAffinity: key1=value1,value2; key2=value3
+
+monitoring:
+  # requires Prometheus to be pre-installed
+  # enabling will also create RBAC rules to allow Operator to create ServiceMonitors
+  enabled: false
 
