设置samba只在具有地点标记为home的节点上运行

--- a/cluster/apps/file-service/samba/helm-release.yaml
+++ b/cluster/apps/file-service/samba/helm-release.yaml
@@ -16,6 +16,9 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
   values:
+    nodeSelector:
+      location: "home"
+
     image:
       repository: ghcr.io/crazy-max/samba
       tag: 4.15.5
