设置kasten的catalog pvc大小为40G

--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -48,3 +48,6 @@ spec:
       statsTimeout: 200
       efsPostRestoreTimeout: 450
       podReadyWaitTimeout: 1440
+    persistence:
+      catalog:
+        size: 40Gi
