设置ceph的csi provisioner只运行一个

--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -22,6 +22,7 @@ spec:
     nodeSelector:
       location: "home"
     csi:
+      provisionerReplicas: 1
       pluginTolerations:
         - key: cloud
           operator: Exists
