--- a/cluster/apps/entertainment/pvcs/music-files.yaml
+++ b/cluster/apps/entertainment/pvcs/music-files.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 1Ti
-  storageClassName: ceph-fs-media
+  storageClassName: ceph-fs-media-unsafe
