--- a/cluster/apps/home-automation/home-assistant/default.yaml
+++ b/cluster/apps/home-automation/home-assistant/default.yaml
@@ -7,9 +7,10 @@
 
 image:
   # -- image repository
-  repository: homeassistant/home-assistant
+  repository: ghcr.io/home-assistant/home-assistant
   # -- image tag
-  tag: 2021.6.3
+  # @default -- chart.appVersion
+  tag:
   # -- image pull policy
   pullPolicy: IfNotPresent
 
@@ -76,12 +77,16 @@ mariadb:
 # @default -- See values.yaml
 postgresql:
   enabled: false
+  image:
+    repository: bitnami/postgresql
+    tag: 14.1.0
   postgresqlUsername: home-assistant
   postgresqlPassword: home-assistant-pass
   postgresqlDatabase: home-assistant
   persistence:
-    enabled: false
-    # storageClass: ""
+    primary:
+      enabled: false
+      # storageClass: ""
 
 # -- Enable and configure influxdb database subchart under this key.
 #    For more options see [influxdb chart documentation](https://github.com/bitnami/charts/tree/master/bitnami/influxdb)
