修复因为手动加了docker.io前缀导致无法正常拉镜像的问题

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
       location: "home"
 
     image:
-      repository: docker.io/plexinc/pms-docker
+      repository: plexinc/pms-docker
       tag: 1.26.2.5797-5bd057d2b
 
     env:
