开启pgsql的诊断模式，以关闭启动状态检测，升级数据库文件版本

--- a/cluster/apps/home-automation/home-assistant/postgresql/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/postgresql/helm-release.yaml
@@ -32,3 +32,6 @@ spec:
         existingClaim: home-assistant-postgresql-data
       nodeSelector:
         location: "home"
+
+    diagnosticMode:
+      enabled: true
