将pgsql降级回11.16，关闭诊断模式，采用导出数据再重新导入的方式更新数据库版本

--- a/cluster/apps/home-automation/home-assistant/postgresql/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/postgresql/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     image:
       repository: bitnami/postgresql
-      tag: 13.6.0-debian-10-r89
+      tag: 11.16.0-debian-11-r7
 
     auth:
       username: "home-assistant"
@@ -34,4 +34,4 @@ spec:
         location: "home"
 
     diagnosticMode:
-      enabled: true
+      enabled: false
