--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -3,17 +3,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - bitnami-charts.yaml
-  - jetstack-charts.yaml
-  - k8s-at-home-charts.yaml
-  - metallb-charts.yaml
-  - metrics-server-charts.yaml
-  - traefik-charts.yaml
-  - rook-ceph-charts.yaml
-  - prometheus-community-charts.yaml
-  - rancher-charts.yaml
-  - sentry-charts.yaml
-  - sonatype-charts.yaml
   - gitlab-charts.yaml
   - grafana-charts.yaml
+  - influxdata-charts.yaml
+  - jetstack-charts.yaml
+  - k8s-at-home-charts.yaml
   - kasten-charts.yaml
+  - metallb-charts.yaml
+  - metrics-server-charts.yaml
   - nextcloud-charts.yaml
+  - prometheus-community-charts.yaml
+  - rancher-charts.yaml
+  - rook-ceph-charts.yaml
+  - sentry-charts.yaml
+  - sonatype-charts.yaml
+  - traefik-charts.yaml
