--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -25,14 +25,16 @@ stringData:
   SECRET_PHOTOPRISM_PASSWORD: ENC[AES256_GCM,data:i3rpGQ5qx9xCHIN0BJqYLh1U7i7jEFBsEqamvtTSP+I=,iv:/uDmP6CjagnEyy6u7QxMPt3DEwmRcNbzSPywn2ZOg1g=,tag:NJmw4yoAQKv9OFlwecRTKQ==,type:str]
   SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:AJ2u1+ddV+G4LipRCDeG+R1EWwsRQwwne2U=,iv:IrQ0C2yM8kLCLVzTWHb194kqsR9Wpet1SOA7oJD5EZY=,tag:PVAfQfdMVP11k0AKZZuXRg==,type:str]
   SECRET_PLEX_ADVERTISE_IP: ENC[AES256_GCM,data:t4n4LKzC+SaLr3xJ8tLVMUPatixbP42Y,iv:8i6OpDToC21YI3bhtw7bblt9FAgIbUabBTk6MMWqkX4=,tag:fzjBiJcl9rfnyTamfDfDwg==,type:str]
+  SECRET_HASS_INFLUXDB_USERNAME: ENC[AES256_GCM,data:tPFvmQ==,iv:jWrA1E02EV909VOyhJm4978d01JpUOc8sTUkODgCJ3c=,tag:j+biQjen7tPpN5MQxStV7g==,type:str]
+  SECRET_HASS_INFLUXDB_PASSWORD: ENC[AES256_GCM,data:oCC33dt+P2AjlIH0Y6r+zck/ycI8vH8KGA3ADtT/2Ss=,iv:K6V4/5pnbITmEq8J7yRQmH0aNbTJL8sm1CN6p45gVQ8=,tag:6JgBgwEyTkbL61eZI1tLpg==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-05-07T04:32:20Z"
-  mac: ENC[AES256_GCM,data:apuhSD+E54F4cyara4UF9X0xhNYHFAneoc+Bo7zjmUI+P30S4Qxt7X8ANgH1Rwn8YAaUacQ+SEnbhIAh2tszkYaJgCJW+W54En2l2Ej2PyKjJ9QZlkenfvfrfgmh3PF7euiI3aeO+SqkJCjopZZOtYYGwQfBeS6urrr3ia9PhVY=,iv:UiXGz5yJFRIUCX7Da+xL8YOqADA7mzNKn4VedoJChRM=,tag:7h/6MZCZkwG/9YaIw8UdAA==,type:str]
+  lastmodified: "2022-06-24T10:06:47Z"
+  mac: ENC[AES256_GCM,data:Jb6VNr+jMSH9Jgu6HBWGIF9UEISdc1HabWBkYh8gIMuIKwKEGzVOoFnf929q44CmSZHymS7FOKN/oAf54aifow8k5QCRbsDy95OvcD17GfLhmlkc+qPp4cxraJKT7dFCZlgPIXrHT6ikvi1vuLZLfU2j1nex2Lwr13C6na21MlA=,iv:bfHJFI9pKy75hU5RH9TJO9m4Mg2QznnsNOfj26MRHiE=,tag:n4+nhYJfaDsWxvw11+c+wA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
