将jellyfin的端口直接暴露出来

--- a/cluster/apps/entertainment/jellyfin/helm-release.yaml
+++ b/cluster/apps/entertainment/jellyfin/helm-release.yaml
@@ -47,6 +47,17 @@ spec:
         mountPath: /anime
         existingClaim: anime-files
 
+    service:
+      main:
+        type: NodePort
+        ports:
+          http:
+            enabled: true
+            port: 8096
+            protocol: TCP
+            targetPort: 8096
+            nodePort: 8096
+
     ingress:
       main:
         enabled: true
