--- a/cluster/apps/entertainment/jellyfin/helm-release.yaml
+++ b/cluster/apps/entertainment/jellyfin/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
         existingClaim: jellyfin-cache
       movie:
         enabled: true
-        mountPath: /data/movie
+        mountPath: /movie
         existingClaim: movie-files
       tv:
         enabled: true
