--- a/cluster/apps/entertainment/qbittorrent/helm-release.yaml
+++ b/cluster/apps/entertainment/qbittorrent/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
             secretName: qbittorrent-tls
 
     probes:
-      liveness:
+      readiness:
         spec:
           initialDelaySeconds: 300
           periodSeconds: 30
