--- a/cluster/apps/entertainment/qbittorrent/helm-release.yaml
+++ b/cluster/apps/entertainment/qbittorrent/helm-release.yaml
@@ -55,7 +55,17 @@ spec:
             secretName: qbittorrent-tls
 
     probes:
+      liveness:
+        spec:
+          initialDelaySeconds: 300
+          periodSeconds: 30
+          failureThreshold: 10
       readiness:
+        spec:
+          initialDelaySeconds: 300
+          periodSeconds: 30
+          failureThreshold: 10
+      startup:
         spec:
           initialDelaySeconds: 300
           periodSeconds: 30
