添加gpu-operator命名空间

--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - 3d-print.yaml
   - bitwarden.yaml
+  - gpu-operator.yaml
 #  - cattle-system.yaml
   - cert-manager.yaml
   - entertainment.yaml
