开启kubesphere的nvidia_dcgm_exporter

--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -40,3 +40,8 @@ spec:
       cloudHub:
         advertiseAddress:
           - "${SECRET_KUBEEDGE_CLOUDHUB_ADDRESS}"
+
+  monitoring:
+    gpu:
+      nvidia_dcgm_exporter:
+        enabled: true
