--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -86,3 +86,7 @@ spec:
           - hosts:
               - "plex.${SECRET_DOMAIN}"
             secretName: plex-tls
+
+    resources:
+      limits:
+        nvidia.com/gpu: 1
