--- a/cluster/apps/entertainment/jellyfin/helm-release.yaml
+++ b/cluster/apps/entertainment/jellyfin/helm-release.yaml
@@ -74,3 +74,7 @@ spec:
           - hosts:
               - "jellyfin.${SECRET_DOMAIN}"
             secretName: jellyfin-tls
+
+    resources:
+      limits:
+        nvidia.com/gpu: 1
