--- a/cluster/apps/entertainment/kustomization.yaml
+++ b/cluster/apps/entertainment/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - bazarr
+  - emby
   - flaresolverr
   - jellyfin
   - overseerr
