给bitwarden添加独立的pgsql数据库

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -27,14 +27,16 @@ stringData:
   SECRET_PLEX_ADVERTISE_IP: ENC[AES256_GCM,data:t4n4LKzC+SaLr3xJ8tLVMUPatixbP42Y,iv:8i6OpDToC21YI3bhtw7bblt9FAgIbUabBTk6MMWqkX4=,tag:fzjBiJcl9rfnyTamfDfDwg==,type:str]
   SECRET_HASS_INFLUXDB_USERNAME: ENC[AES256_GCM,data:tPFvmQ==,iv:jWrA1E02EV909VOyhJm4978d01JpUOc8sTUkODgCJ3c=,tag:j+biQjen7tPpN5MQxStV7g==,type:str]
   SECRET_HASS_INFLUXDB_PASSWORD: ENC[AES256_GCM,data:oCC33dt+P2AjlIH0Y6r+zck/ycI8vH8KGA3ADtT/2Ss=,iv:K6V4/5pnbITmEq8J7yRQmH0aNbTJL8sm1CN6p45gVQ8=,tag:6JgBgwEyTkbL61eZI1tLpg==,type:str]
+  SECRET_BITWARDEN_PGSQL_USERNAME: ENC[AES256_GCM,data:FF8iNw==,iv:xJzaOVLlKwo6V3r7X3wQuVwypbLU5RQHeBlzGOE8lGc=,tag:GWgRadh1R4DdmkpTP4u9cg==,type:str]
+  SECRET_BITWARDEN_PGSQL_PASSWORD: ENC[AES256_GCM,data:m6USyEn3k+JeQLqQsOqiKQGvq1xhIzv9kplHObDBKI0=,iv:Ct7GBoziaMoiduoZFU7PI+GOPzBwVsDnFLC1O0XQcdM=,tag:VailzZ/d00ueBSjXS7VTGA==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-06-24T10:06:47Z"
-  mac: ENC[AES256_GCM,data:Jb6VNr+jMSH9Jgu6HBWGIF9UEISdc1HabWBkYh8gIMuIKwKEGzVOoFnf929q44CmSZHymS7FOKN/oAf54aifow8k5QCRbsDy95OvcD17GfLhmlkc+qPp4cxraJKT7dFCZlgPIXrHT6ikvi1vuLZLfU2j1nex2Lwr13C6na21MlA=,iv:bfHJFI9pKy75hU5RH9TJO9m4Mg2QznnsNOfj26MRHiE=,tag:n4+nhYJfaDsWxvw11+c+wA==,type:str]
+  lastmodified: "2022-08-04T03:57:43Z"
+  mac: ENC[AES256_GCM,data:u+ysEAd3yDYAPfIoy1Kux143OPw4t6KYROzPWToa6x4RKKFvewf28fKtqd/BcNg4AHc1XmnHhwWF4iN6ADKbHw04X3i3ZOudeUcxtPfyrSI93aJYEtVBYtluHZWS9e+aicuyCcc7ZLDaEy/e5zPSGegZPH4VlEMR7i/RFql0ZDY=,iv:ZgzUbVBmLuZqjyDBVewTVpub7dNBIuV45dIuaPTgmEk=,tag:HwRDFZItDhXlMU5Dq+BFBg==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
