--- a/cluster/apps/others/bitwarden/helm-release.yaml
+++ b/cluster/apps/others/bitwarden/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
       tag: 1.25.2
     env:
       TZ: "Asia/Shanghai"
+      DATABASE_URL: "postgresql://${SECRET_BITWARDEN_PGSQL_USERNAME}:${SECRET_BITWARDEN_PGSQL_PASSWORD}@bitwarden-postgresql:5432/bitwarden"
     ingress:
       main:
         enabled: true
