--- a/cluster/apps/entertainment/emby/helm-release.yaml
+++ b/cluster/apps/entertainment/emby/helm-release.yaml
@@ -17,6 +17,10 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    image:
+      repository: ghcr.io/k8s-at-home/emby
+      tag: v4.6.1.0
+
     nodeSelector:
       location: "home"
 
