fix The CSR PEM requests a commonName that is not present in the list of dnsNames or ipAddresses. If a commonName is set, ACME requires that the value is also present in the list of dnsNames or ipAddresses

--- a/cluster/core/cert-manager/direct-wildcard-certificate.yaml
+++ b/cluster/core/cert-manager/direct-wildcard-certificate.yaml
@@ -9,7 +9,7 @@ spec:
   issuerRef:
     name: letsencrypt-dns
     kind: ClusterIssuer
-  commonName: "direct-${SECRET_DOMAIN}"
+  commonName: "direct.${SECRET_DOMAIN}"
   dnsNames:
     - "direct.${SECRET_DOMAIN}"
     - "*.direct.${SECRET_DOMAIN}"
