--- a/cluster/apps/entertainment/emby/helm-release.yaml
+++ b/cluster/apps/entertainment/emby/helm-release.yaml
@@ -56,11 +56,16 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+          - host: "emby.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         annotations:
           kubernetes.io/ingress.class: "traefik"
           traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
 
     resources:
       limits:
