--- a/cluster/apps/entertainment/emby/helm-release.yaml
+++ b/cluster/apps/entertainment/emby/helm-release.yaml
@@ -48,6 +48,21 @@ spec:
         mountPath: /data/tv
         existingClaim: tv-files
 
+    hostNetwork: true
+
+    service:
+      main:
+        ports:
+          http:
+            port: 8096
+      dlna:
+        enabled: true
+        ports:
+          dlna:
+            enabled: true
+            port: 1900
+            protocol: UDP
+
     ingress:
       main:
         enabled: true
