--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -21,7 +21,7 @@ stringData:
   SECRET_NEXTCLOUD_MARIADB_USERNAME: ENC[AES256_GCM,data:iRsy0A==,iv:1J99fWW661oMNj2cxd7qdjWGasFetXtqnE1qqPPfXfc=,tag:zBPIhym2gsS9IYRreGHgNw==,type:str]
   SECRET_NEXTCLOUD_MARIADB_PASSWORD: ENC[AES256_GCM,data:MXvdYosO7gmcNiCs41YAdrUpQZ9Vv8l3P8W5jdZFP70=,iv:/9f4gT95Cu560wPHG8zy9jY6Eb+t1/AJR8AQMLUd57k=,tag:pENzK0WkPZ4hbw0fNIsXqQ==,type:str]
   SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
-  SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
+  SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:IoKAD9HXe3hp50M=,iv:t85fkUY1ms4nTrfFkCbxs5LcozlHIL2gLpNBYbojsLg=,tag:kcTAYTHMnI+ALQwuXdDuag==,type:str]
   SECRET_PHOTOPRISM_PASSWORD: ENC[AES256_GCM,data:i3rpGQ5qx9xCHIN0BJqYLh1U7i7jEFBsEqamvtTSP+I=,iv:/uDmP6CjagnEyy6u7QxMPt3DEwmRcNbzSPywn2ZOg1g=,tag:NJmw4yoAQKv9OFlwecRTKQ==,type:str]
   SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:AJ2u1+ddV+G4LipRCDeG+R1EWwsRQwwne2U=,iv:IrQ0C2yM8kLCLVzTWHb194kqsR9Wpet1SOA7oJD5EZY=,tag:PVAfQfdMVP11k0AKZZuXRg==,type:str]
   SECRET_PLEX_ADVERTISE_IP: ENC[AES256_GCM,data:t4n4LKzC+SaLr3xJ8tLVMUPatixbP42Y,iv:8i6OpDToC21YI3bhtw7bblt9FAgIbUabBTk6MMWqkX4=,tag:fzjBiJcl9rfnyTamfDfDwg==,type:str]
@@ -35,8 +35,8 @@ sops:
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-08-04T03:57:43Z"
-  mac: ENC[AES256_GCM,data:u+ysEAd3yDYAPfIoy1Kux143OPw4t6KYROzPWToa6x4RKKFvewf28fKtqd/BcNg4AHc1XmnHhwWF4iN6ADKbHw04X3i3ZOudeUcxtPfyrSI93aJYEtVBYtluHZWS9e+aicuyCcc7ZLDaEy/e5zPSGegZPH4VlEMR7i/RFql0ZDY=,iv:ZgzUbVBmLuZqjyDBVewTVpub7dNBIuV45dIuaPTgmEk=,tag:HwRDFZItDhXlMU5Dq+BFBg==,type:str]
+  lastmodified: "2022-08-19T09:27:58Z"
+  mac: ENC[AES256_GCM,data:g0Erba3XtZyTjD9HA4SOrfHBz0wdHPBUZFx/llVZ67QgplwkA7wwW9aU21q0XYs3Uh9xNFJqYRyNuGoehNd9mmZ2tq1JenOnOM3Mh6Yq6TrQ+tf/9WWt2bRfy1d0jsWuxMlWtymterybZaNrZ2/Yj/cJkK5C0kU84FMRipWneIQ=,iv:jBq0uwNpFVaMzWq143ZWqoJzCZUO5exGIS/W/D0CmrI=,tag:BGSxF8AqXr6ULnww+BGxqA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
