--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -19,15 +19,22 @@ spec:
     resources:
       limits:
         memory: 1Gi
-    nodeSelector:
-      location: "home"
     csi:
       provisionerReplicas: 1
       pluginTolerations:
-        - key: cloud
+        - key: location
           operator: Exists
+          effect: NoSchedule
         - key: kubernetes.io/arch
           operator: Exists
+          effect: NoSchedule
+        - key: node-role.kubernetes.io/edge
+          operator: Exists
+          effect: NoSchedule
       provisionerTolerations:
         - key: kubernetes.io/arch
           operator: Exists
+          effect: NoSchedule
+        - key: node-role.kubernetes.io/edge
+          operator: Exists
+          effect: NoSchedule
