给emby添加一个转码临时目录用的pvc

--- a/cluster/apps/entertainment/emby/helm-release.yaml
+++ b/cluster/apps/entertainment/emby/helm-release.yaml
@@ -31,6 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: emby-config
+      transcode:
+        enabled: true
+        mountPath: /tmp/transcoding-temp
+        existingClaim: emby-transcode
       anime:
         enabled: true
         mountPath: /data/anime
