--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -22,7 +22,7 @@ spec:
     csi:
       provisionerReplicas: 1
       pluginTolerations:
-        - key: cloud
+        - key: location
           operator: Exists
           effect: NoSchedule
         - key: kubernetes.io/arch
